infrastructure/kubernetes/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ghxstship
  labels:
    name: ghxstship
    environment: base
