infrastructure/kubernetes/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ghxstship-web
  namespace: ghxstship
  labels:
    app: ghxstship-web
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: ghxstship-web
